syntax = "proto3";

option  csharp_namespace = "GrpcService.FileServiceClient";

import "google/protobuf/timestamp.proto";

message GetFileRequest{
  string fileGuid = 1;
}

message GetFileResponse{
  string fileName = 1;
  bytes data = 2;
  google.protobuf.Timestamp creationDate = 3;
  string extension = 4;
  string guid = 5;
}

message GetAllFilesRequest{}

message GetAllFilesResponse{
  repeated GetFileResponse files = 1;
}

message DeleteFileRequest{
  string fileGuid = 1;
}

message DeleteFileResponse{}

message CreateFileRequest{
  string fileName = 1;
  bytes data = 2;
  string extension = 3;
}

message CreateFileResponse{
  int32 fileId = 1;
}

message RenameFileRequest{
  string guid = 1;
  string newFileName = 2;
}

message RenameFileResponse{}

service FileService{
  rpc GetFile(GetFileRequest) returns (GetFileResponse);
  rpc GetAllFiles(GetAllFilesRequest) returns (GetAllFilesResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
  rpc CreateFile(CreateFileRequest) returns (CreateFileResponse);
  rpc RenameFile(RenameFileRequest) returns (RenameFileResponse);
}

